--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
-<title>Game Kredit</title>
+<title>Game Kart</title>
 
 <style>
 body{
@@ -13,17 +13,32 @@ body{
   justify-content:center;
   align-items:center;
   background:linear-gradient(135deg,#1e3c72,#2a5298);
-  font-family:Arial;
+  font-family:Arial, sans-serif;
 }
 
+/* Telefon korpusu */
 .phone{
   width:380px;
   background:#0f172a;
   padding:25px;
-  border-radius:30px;
-  box-shadow:0 0 40px rgba(0,0,0,0.7);
+  border-radius:40px;
+  box-shadow:0 0 50px rgba(0,0,0,0.8);
+  position:relative;
 }
 
+.phone::before{
+  content:"";
+  position:absolute;
+  top:10px;
+  left:50%;
+  transform:translateX(-50%);
+  width:120px;
+  height:6px;
+  background:#1e293b;
+  border-radius:10px;
+}
+
+/* Kart */
 .card{
   width:100%;
   height:200px;
@@ -47,7 +62,7 @@ body{
   position:absolute;
   width:100%;
   height:100%;
-  border-radius:18px;
+  border-radius:20px;
   padding:20px;
   box-sizing:border-box;
   backface-visibility:hidden;
@@ -68,7 +83,7 @@ body{
 }
 
 .card-number{
-  font-size:20px;
+  font-size:22px;
   letter-spacing:3px;
   margin-top:60px;
 }
@@ -77,37 +92,47 @@ body{
   display:flex;
   justify-content:space-between;
   margin-top:20px;
-  font-size:14px;
+  font-size:16px;
 }
 
 .cvv-box{
   background:white;
   color:black;
-  padding:6px;
+  padding:8px;
   margin-top:80px;
   text-align:right;
-  border-radius:5px;
+  border-radius:6px;
+  width:80px;
+  margin-left:auto;
 }
 
-input{
+/* Inputlar */
+.input-large{
   width:100%;
-  padding:12px;
-  margin-bottom:10px;
-  border-radius:10px;
+  padding:14px;
+  border-radius:12px;
   border:none;
+  margin-bottom:15px;
+  font-size:18px;
+  text-align:center;
   background:#1e293b;
   color:white;
 }
 
-button{
-  width:100%;
-  padding:12px;
-  border-radius:10px;
+.row{
+  display:flex;
+  gap:15px;
+}
+
+.input-small{
+  flex:1;
+  padding:14px;
+  border-radius:12px;
   border:none;
-  background:#38bdf8;
+  font-size:18px;
+  text-align:center;
+  background:#1e293b;
   color:white;
-  font-weight:bold;
-  cursor:pointer;
 }
 </style>
 </head>
@@ -124,7 +149,7 @@ button{
 <div class="card-number" id="displayNumber">#### #### #### ####</div>
 <div class="card-bottom">
 <div id="display4">0000</div>
-<div>GAME</div>
+<div></div>
 </div>
 </div>
 
@@ -135,16 +160,20 @@ button{
 </div>
 </div>
 
-<input type="text" id="cardNumber" placeholder="16 simvol">
-<input type="text" id="code4" placeholder="4 simvol">
-<input type="text" id="code3" placeholder="3 simvol">
+<!-- 16 rəqəm -->
+<input type="text" id="cardNumber" class="input-large" placeholder="0000 0000 0000 0000">
 
-<button>Başla</button>
+<!-- aşağı sıra -->
+<div class="row">
+  <input type="text" id="code4" class="input-small" placeholder="0000">
+  <input type="text" id="code3" class="input-small" placeholder="000">
+</div>
 
 </div>
 
 <script>
 const card=document.getElementById("card");
+
 const numberInput=document.getElementById("cardNumber");
 const code4Input=document.getElementById("code4");
 const code3Input=document.getElementById("code3");
@@ -153,28 +182,29 @@ const displayNumber=document.getElementById("displayNumber");
 const display4=document.getElementById("display4");
 const display3=document.getElementById("display3");
 
-/* 16 limit + 4-4-4-4 */
+/* Yalnız rəqəm + 16 limit + 4-4-4-4 */
 numberInput.addEventListener("input",function(e){
-  let raw=e.target.value.replace(/\s/g,"").slice(0,16);
+  let raw=e.target.value.replace(/\D/g,"").slice(0,16);
   let formatted=raw.replace(/(.{4})/g,"$1 ").trim();
   e.target.value=formatted;
   displayNumber.textContent=formatted||"#### #### #### ####";
 });
 
-/* 4 simvol */
+/* 4 rəqəm */
 code4Input.addEventListener("input",e=>{
-  let v=e.target.value.slice(0,4);
+  let v=e.target.value.replace(/\D/g,"").slice(0,4);
   e.target.value=v;
   display4.textContent=v||"0000";
 });
 
-/* 3 simvol + flip */
+/* 3 rəqəm */
 code3Input.addEventListener("input",e=>{
-  let v=e.target.value.slice(0,3);
+  let v=e.target.value.replace(/\D/g,"").slice(0,3);
   e.target.value=v;
   display3.textContent=v||"000";
 });
 
+/* Flip */
 code3Input.addEventListener("focus",()=>card.classList.add("flip"));
 code3Input.addEventListener("blur",()=>card.classList.remove("flip"));
 </script>
